# etsfit

./: .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/etsfit/: index.rst
docs/source/: etsfit.conftest.rst  etsfit.etsfit.rst  etsfit.rst  etsfit.tests.rst  etsfit.utils.MCMC.rst  etsfit.utils.crossmatch.rst  etsfit.utils.default_plots.rst  etsfit.utils.gp_injections.rst  etsfit.utils.gp_plots.rst  etsfit.utils.injections.rst  etsfit.utils.paperplots.rst  etsfit.utils.parameter_retrieval.rst  etsfit.utils.pipeline.rst  etsfit.utils.rst  etsfit.utils.tests.rst  etsfit.utils.utilities.rst  etsfit.version.rst  modules.rst  page.rst
etsfit/: MCMC.py  __init__.py  _astropy_init.py  batch_analyze.py  conftest.py  etsMAIN.py  etsfit.py  utilities.py
etsfit/data/: 18thmag_Ia.csv  metaregr_SN2018fub_0221_30mn_n005_d4.0_of11.csv  metaregr_SN2018fub_2921_10mn_n005_d4.0_of11.csv  metatarg.csv  rflx_SN2018fub_0221_30mn_n005_d4.0_of11.csv  rflx_SN2018fub_2921_10mn_n005_d4.0_of11.csv  rflxtarg_SN2018fub_0221_30mn_n005_d4.0_of11.csv  rflxtarg_SN2018fub_2921_10mn_n005_d4.0_of11.csv
etsfit/utils/: MCMC.py  artificial_data.py  batch_analyze.py  big_celerite_plot.py  big_sn_plot.py  cdpp_analysis.py  celerite_boogaloo.py  complete_injection.py  runAllType  (+21 more)
licenses/: LICENSE.rst
tutorials/: Paper Producer 1 (Crossmatch).ipynb  Paper Producer 2 - Running etsfit on data.ipynb  Paper Producer 3 - Completeness.ipynb  Paper Producer 3 - Injections.ipynb  Paper Producer 4 - Big Celerite Plot.ipynb  Paper Producer 4 - Reliability testing.ipynb  Tutorial 1 Loading and Basic Fit.ipynb  Tutorial 1 Loading and Basic Fits.ipynb  Tutorial 2 Gaussian Process Backgrounds.ipynb  Tutorial 3 Pipelining a Lot of Fits.ipynb  Tutorial 4 Non-TESS or Non-tessreduce data.ipynb  gp_injections.py  tns_10.csv
(+26 files in other folders)
