[metadata]
name = etsfit
author = Lindsey Gordon
author_email = gordo840@umn.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = lcgordon.github.io
description = early time supernova power law model fitting
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = lcgordon/etsfit

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    matplotlib
    emcee
    celerite
    scipy
    pandas
    corner
    tinygp
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
etsfit = data/*

[tool:pytest]
testpaths = "etsfit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    etsfit/_astropy_init*
    etsfit/conftest.py
    etsfit/*setup_package*
    etsfit/tests/*
    etsfit/*/tests/*
    etsfit/extern/*
    etsfit/version*
    */etsfit/_astropy_init*
    */etsfit/conftest.py
    */etsfit/*setup_package*
    */etsfit/tests/*
    */etsfit/*/tests/*
    */etsfit/extern/*
    */etsfit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
